--- a/fviews-3.1.0.html
+++ b/fviews-3.1.0.html
@@ -9,7 +9,7 @@
 <template name="layout">
   {{#SequentialLayout direction="X" target="content" class="blue-bg"}}
     {{#famousEach myItems}}
-      {{>Surface template="item" size="[undefined, true]"}}
+      {{>Surface template="item" size="[undefined, 150]"}}
     {{/famousEach}}
   {{/SequentialLayout}}
 </template>
