--- a/fviews-3.1.0.html
+++ b/fviews-3.1.0.html
@@ -7,7 +7,7 @@
 </body>
 
 <template name="layout">
-  {{#SequentialLayout direction="X" target="content" class="blue-bg"}}
+  {{#SequentialLayout direction="X"}}
     {{#famousEach myItems}}
       {{>Surface template="item" size="[undefined, 150]"}}
     {{/famousEach}}
